--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptiveweb",
-  "version": "1.0.0",
+  "version": "1.0.0a2",
   "description": "",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
