--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,37 @@
 {
     "extends": "./node_modules/@sentry/typescript/tsconfig.json",
     "compilerOptions": {
-        "target": "es2017",
-        "module": "commonjs",
         "declaration": true,
+        "downlevelIteration": true,
+        "inlineSources": true,
+        "importHelpers": true,
+        "lib": ["es6", "dom"],
         "baseUrl": ".",
         "rootDir": "src",
         "outDir": "dist",
-        "strict": true,
         "noUnusedParameters": false,
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "noEmitHelpers": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
+        "pretty": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "es2017",
+        "strictBindCallApply": false,
+        "plugins": [
+        {
+            "name": "typescript-tslint-plugin",
+            "alwaysShowRuleFailuresAsWarnings": false,
+            "ignoreDefinitionFiles": true,
+            "configFile": "./tslint.json",
+            "suppressWhileTypeErrorsPresent": false,
+            "mockTypeScriptVersion": false
+        }
+        ]
     }
 }
