--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "mocha -r ts-node/register test/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,11 @@
   },
   "devDependencies": {
     "@sentry/typescript": "^4.5.3",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^8.0.2",
     "typescript": "^3.2.4"
   }
 }
