--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts"
+    "test": "nyc mocha -r ts-node/register test/**/*.spec.ts"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "dist"
+    ],
+    "all": true
   },
   "repository": {
     "type": "git",
@@ -28,6 +39,8 @@
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "source-map-support": "^0.5.10",
     "ts-node": "^8.0.2",
     "typescript": "^3.2.4"
   }
