--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "nyc mocha -r ts-node/register test/**/*.spec.ts"
+    "test": "nyc mocha -r ts-node/register test/**/*.spec.ts && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "extension": [
@@ -38,6 +38,7 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "source-map-support": "^0.5.10",
