--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptiveweb",
-  "version": "1.0.1-alpha5",
+  "version": "1.1.0",
   "description": "Adaptive Web Accessibility Toolkit",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
