--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@sentry/typescript": "^4.5.3",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
+    "@typescript-eslint/parser": "^1.6.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
+    "eslint": "^5.16.0",
     "jsdom": "13.2.0",
     "jsdom-global": "3.0.2",
     "mocha": "^5.2.0",
